# nucleus

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  appveyor.yml
buildsystem/: buildsystem.cmake  detect_compiler_and_platform.cmake  detect_isa.cmake  detect_multi_target_generator.cmake  detect_operating_system.cmake  detect_void_pointer_size.cmake  languages.cmake  set_default_module_properties.cmake  set_default_project_properties.cmake  templates.cmake
ci/appveyor/: appveyor.yml
demo/: CMakeLists.txt
demo/src/: nucleus-demo.c
documentation/: Nucleus_AlwaysFail.md  Nucleus_AlwaysSucceed.md  Nucleus_Atomic_decrementAndTestInteger.md  Nucleus_Atomic_decrementInteger.md  Nucleus_Atomic_incrementInteger.md  Nucleus_Collections_ByteArray.md  Nucleus_Collections_ByteArray_appendMany.md  Nucleus_Collections_ByteArray_initialize.md  Nucleus_Collections_ByteArray_insertMany.md  Nucleus_Collections_ByteArray_prependMany.md  Nucleus_Collections_ByteArray_uninitialize.md  Nucleus_Collections_[Array-Collection-Type]_append.md  Nucleus_Collections_[Array-Collection-Type]_at.md  Nucleus_Collections_[Array-Collection-Type]_ensureFreeCapacity.md  Nucleus_Collections_[Array-Collection-Type]_getCapacity.md  Nucleus_Collections_[Array-Collection-Type]_getFreeCapacity.md  Nucleus_Collections_[Array-Collection-Type]_insert.md  Nucleus_Collections_[Array-Collection-Type]_prepend.md  Nucleus_Collections_[ArrayCollection]_append.md  Nucleus_Collections_[ArrayCollection]_at.md  Nucleus_Collections_[ArrayCollection]_ensureFreeCapacity.md  Nucleus_Collections_[ArrayCollection]_getCapacity.md  Nucleus_Collections_[ArrayCollection]_getFreeCapacity.md  Nucleus_Collections_[ArrayCollection]_insert.md  Nucleus_Collections_[ArrayCollection]_prepend.md  Nucleus_Collections_[Collection-Type]_clear.md  Nucleus_Collections_[Collection-Type]_getSize.md  Nucleus_Collections_[MapCollection]_removeExtended.md  Nucleus_DynamicByteArray.md  Nucleus_DynamicByteArray_appendMany.md  Nucleus_DynamicByteArray_clear.md  Nucleus_DynamicByteArray_getCapacity.md  Nucleus_DynamicByteArray_getFreeCapacity.md  Nucleus_DynamicByteArray_getSize.md  Nucleus_DynamicByteArray_initialize.md  Nucleus_DynamicByteArray_insertMany.md  Nucleus_DynamicByteArray_prependMany.md  Nucleus_DynamicByteArray_uninitialize.md  Nucleus_Dynamic[Array-Collection-Type]_append.md  Nucleus_Dynamic[Array-Collection-Type]_ensureFreeCapacity.md  (+55 more)
src/: lx-demo.c  lx.c  lx.h  nucleus-annotations.h  nucleus-get-file-contents-linux.c  nucleus-get-file-contents-linux.h  nucleus-get-file-contents-windows.c  nucleus-get-file-contents-windows.h  nucleus-get-file-contents.h  nucleus-memory-manager-interface.c  nucleus-set-file-contents-linux.c  nucleus-set-file-contents-linux.h  nucleus-set-file-contents-windows.c  nucleus-set-file-contents-windows.h  nucleus-set-file-contents.h  nucleus-status.h  nucleus.h
test/: CMakeLists.txt
test/ByteArray/: CMakeLists.txt
test/ByteArray/src/Nucleus.Test.ByteArray/: main.c  testCollection.c
test/C.strrstr/: CMakeLists.txt
test/C.strrstr/src/Nucleus.Test.C.strrstr/: main.c
test/Concurrency/: CMakeLists.txt
test/Concurrency/src/Nucleus.Test.Concurrency/: main.c
test/Concurrency1/: CMakeLists.txt
test/Concurrency1/src/Nucleus.Test.Concurrency1/: main.c
test/Concurrency2/: CMakeLists.txt
test/Concurrency2/src/Nucleus.Test.Concurrency2/: main.c
test/Concurrency3/: CMakeLists.txt
test/Concurrency3/src/Nucleus.Test.Concurrency3/: main.c
test/DecimalFloat/: CMakeLists.txt
test/DecimalInteger/: CMakeLists.txt
test/DecimalInteger/src/Nucleus.Test.DecimalInteger/: Add.c  Add.h  Compare.c  Compare.h  Negate.c  Negate.h  Subtract.c  Subtract.h  main.c
test/DirectoryEnumerator/: CMakeLists.txt
test/DirectoryEnumerator/src/Nucleus.Test.DirectoryEnumerator/: main.c
test/DynamicByteArray/: CMakeLists.txt
test/DynamicByteArray/src/Nucleus.Test.DynamicByteArray/: main.c  testCollection.c  testCollection.h
test/DynamicPointerDeque/: CMakeLists.txt
test/DynamicPointerDeque/src/Nucleus.Test.DynamicPointerDeque/: main.c  testCollection.c
test/DynamicPointerHashMap/: CMakeLists.txt
test/DynamicPointerHashMap/src/Nucleus.Test.DynamicPointerHashMap/: main.c  testCollection.c  testConstantEnumerator.c  testEnumerator.c  testEnumerator.h  testGetSet.c  testGetSet.h
test/FloatingDecimal/: CMakeLists.txt
test/FloatingDecimal/src/Nucleus.Test.FloatingDecimal/: main.c
test/HashValues/: CMakeLists.txt
test/HashValues/src/Nucleus.Test.HashValues/: Main.c
test/NoReturn/: CMakeLists.txt
test/NoReturn/src/Nucleus.Test.NoReturn/: main.c
test/PointerDeque/: CMakeLists.txt
test/PointerDeque/src/Nucleus.Test.PointerDeque/: main.c  testCollection.c  testCollection.h
test/PointerHashMap/: CMakeLists.txt
test/PointerHashMap/src/Nucleus.Test.PointerHashMap/: main.c  testCollection.c  testCollection.h  testConstantEnumerator.c  testConstantEnumerator.h  testGetSet.c
test/booleanToString/: CMakeLists.txt
test/booleanToString/src/Nucleus.Test.booleanToString/: main.c
test/empty/: CMakeLists.txt
test/getFileContents/: CMakeLists.txt
test/getFileContents/src/Nucleus.Test.getFileContents/: main.c
test/getFileState/: CMakeLists.txt
test/getFileState/src/Nucleus.Test.getFileState/: main.c
test/setFileContents/: CMakeLists.txt
test/setFileContents/src/Nucleus.Test.setFileContents/: main.c
test/src/: nucleus-test.c  nucleus-test.cpp
test/stringToBoolean/: CMakeLists.txt
