# Copyright (c) Michael Heilmann 2017, 2018

add_subdirectory(empty)
add_subdirectory(setFileContents)
add_subdirectory(getFileContents)
add_subdirectory(booleanToString)
add_subdirectory(stringToBoolean)
add_subdirectory(DynamicByteArray)
add_subdirectory(DynamicPointerDeque)
add_subdirectory(HashValues)
add_subdirectory(Concurrency)
