# Copyright (c) 2017, 2018 Michael Heilmann

if (Nucleus-With-Tests)
  add_subdirectory(empty)
  add_subdirectory(DecimalFloat)
  add_subdirectory(DecimalInteger)
  add_subdirectory(DirectoryEnumerator)
  add_subdirectory(setFileContents)
  add_subdirectory(getFileContents)
  add_subdirectory(booleanToString)
  add_subdirectory(stringToBoolean)
  add_subdirectory(DynamicByteArray)
  add_subdirectory(DynamicPointerDeque)
  add_subdirectory(DynamicPointerHashMap)
  add_subdirectory(HashValues)
  add_subdirectory(Concurrency1)
  add_subdirectory(Concurrency2)
  add_subdirectory(Concurrency3)
  add_subdirectory(getFileState)
  add_subdirectory(NoReturn)
  add_subdirectory(C.strrstr)
endif()
